# whisper_agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  cli.py  config.py  doctor.py  orchestrator.py  tui.py
src/audio/: __init__.py  hotkey.py  mic.py  recorder.py  ring_buffer.py  speaker.py  vad.py
src/llm/: __init__.py  ollama.py  tool_use.py
src/skills/: __init__.py
src/stt/: __init__.py  base.py  whisper.py
src/tools/: __init__.py  builtin.py  mcp.py
src/tts/: __init__.py  base.py  kokoro.py  streaming.py
src/wake/: __init__.py  openww.py
tests/: _fake_mcp_server.py  test_builtin_tools.py  test_cli.py  test_doctor.py  test_interrupt.py  test_mcp.py  test_ollama_parser.py  test_orchestrator.py  test_recorder.py  test_ring_buffer.py  test_sentence_chunker.py  test_smoke.py  test_stt.py  test_tool_use.py  test_tui.py  test_vad.py  test_wake.py
