[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "whisper-agent"
version = "0.0.1"
description = "Voice-driven local agent loop: STT -> local LLM with tools -> TTS."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "whisper-agent contributors" }]
keywords = [
    "voice",
    "whisper",
    "speech-to-text",
    "text-to-speech",
    "local-llm",
    "agent",
    "accessibility",
    "offline",
    "ollama",
    "tool-use",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "numpy>=1.26",
    "sounddevice>=0.4.7",
    "soundfile>=0.12",
]

[project.optional-dependencies]
stt = [
    "faster-whisper>=1.0.3",
    "silero-vad>=5.0",
]
tts = []
wake = [
    "openwakeword>=0.6.0",
]
llm = [
    "ollama>=0.3.0",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "jiwer>=3.0",  # WER scoring for STT tests
]
all = [
    "whisper-agent[stt,tts,wake,llm,dev]",
]

[project.scripts]
whisper-agent = "whisper_agent.cli:app"

[project.urls]
Homepage = "https://github.com/whisper-agent/whisper-agent"
Repository = "https://github.com/whisper-agent/whisper-agent"
Issues = "https://github.com/whisper-agent/whisper-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "audio: tests that require a real microphone/speaker (skipped in CI)",
    "model: tests that download a model on first run (skipped in CI by default)",
    "slow: long-running tests",
]
